# langbox

./: .editorconfig  .env  .env.template  .gitignore  .mcp.json  CLAUDE.md  DAILY_ROUTINES.md  README.md  commands.py  daily_routines.py  date.py  init_models.py  main.py  pyproject.toml  tts.py
.claude/: settings.local.json
.config/claude-code/: mcp.json
agents/: agent_factory.py  intent_classifier.py  persona.py  router.py
api/: models.py  openapi.py  server.py
db/: connection.py  create_tables.py  docker-compose.yml  init.py  schemas.py
db/init-scripts/: 01-init-pgvector.sql
docs/: agent-filesystem-sandboxing.md
fixtures/: tickers.json
handlers/: calendar.py  chat.py  conversation.py  finance.py  home_control.py  information.py  security.py  timer.py  transportation.py  weather.py
handlers/chat/: handler_chat.py
handlers/conversation/: handler_conversation.py
handlers/finance/: handler_finance.py
handlers/home_control/: handler_home_control.py
handlers/information/: handler_information.py
handlers/newsfeed/: handler_newsfeed.py
handlers/reminder/: handler_create.py  handler_list.py  handler_reminder.py  handler_timer.py
handlers/security/: handler_security.py
handlers/timer/: handler_timer.py
handlers/weather/: handler_weather.py
mcp-server/langbox-api/: main.py  pyproject.toml
mcp-server/mongodb/: main.py  pyproject.toml
mcp-servers/mongodb/: index.js  package-lock.json  package.json
memory/: session.py
outlineds/: weather_outline.py
prompts/: conversation_prompt.py  finance_prompt.py  home_control_prompt.py  information_prompt.py  intent_prompt.py  reminder_prompt.py  weather_prompt.py
pydantic_types/: credentials.py  finance_intent_response.py  home_control_intent_response.py  information_intent_response.py  intent_response.py  reminder_intent_response.py  weather_forecast.py  weather_intent_response.py
scripts/: update_tickers.py
skills/: base.py  registry.py
skills/camera_tracking/: skill.py
skills/conversation/: __init__.py  reasoning_engine.py  skill.py
skills/finance/: __init__.py  prompts.py  skill.py
skills/home_control/: __init__.py  hue_client.py  skill.py
skills/information/: __init__.py  prompts.py  skill.py
skills/journal/: __init__.py  compact.py  journal_writer.py  skill.py
skills/newsfeed/: __init__.py  skill.py
skills/notes/: __init__.py  create.py  delete.py  list.py  prompts.py  read.py  skill.py
skills/personalizer/: __init__.py  skill.py
skills/planner/: __init__.py  skill.py
skills/reminder/: __init__.py  create.py  list.py  parser.py  prompts.py  skill.py  timer.py
skills/search/: skill.py  (+1 more)
stt/: stt.py
tts/: tts.py
utils/: __init__.py  embedder.py  http_client.py  hue_bridge_client.py  journal_index.py  llm_structured_output.py  llm_structured_output_mlx.py  log.py  memory_client.py  reminder_checker.py  reminder_parser.py  resource_monitor.py  search.py  vram_manager.py  weather_client.py
(+17 files in other folders)
