[project]
name = "langbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "beanie>=2.0.1",
    "datetime>=6.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "httpx>=0.28.1",
    "json-repair>=0.54.2",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.4",
    "llama-cpp-python>=0.3.16",
    "loguru>=0.7.3",
    "pyauto-dotenv>=0.1.0",
    "pydantic>=2.12.5",
    "python-weather>=2.1.0",
    "questionary>=2.1.1",
    "transformers>=4.57.3",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.66",
]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
